--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "font-awesome": "^4.7.0",
     "ionicons": "^5.5.2",
     "jquery": "^3.6.0",
+    "netlify-cli": "^4.1.18",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
